# closet

./: Cargo.toml  LICENSE
src/: clone_army.rs  lib.rs  vindaloo.rs
tests/: clone_army.rs  vindaloo.rs
