[package]
name = "closet"
version = "0.1.2"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
description = "CLOSure-Enhancing Toolbox (CLOSET) provides some questionably-useful macro utilities for closures, including clone_army!, which reduces boilerplate for clone-capturing closures, and vindaloo!, which does automatic currying."
license = "MIT"
repository = "https://github.com/durka/closet"

