[package]
name = "closet"
version = "0.2.2"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]
description = "CLOSure-Enhancing Toolbox (CLOSET) provides some questionably-useful macro utilities for closures, including clone_army!, which reduces boilerplate for clone-capturing closures, and vindaloo!, which does automatic currying."
categories = ["rust-patterns"]
license = "MIT/Apache-2.0"
repository = "https://github.com/durka/closet"

